--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,14 @@ body {
 	border: 1px solid #293462;
 	margin: 5px;
 }
-h1 {
+.ro2 {
 	background-color: #293462;
 	color: #fff;
 }
 img {
 	height: 200px;
 }
-p {
+.pe {
 	background-color: #A64942;
 	font-size: 25px;
 	font-family: Arial;
