--- a/css/se.css
+++ b/css/se.css
@@ -7,7 +7,7 @@ body {
     background-image: url(../image/pe.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100%;
+    background-size: cover;
 }
 
 .b1 {
